<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:id="@+id/imgBac"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/arrow_left_29172"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/conquista"
            android:textColor="#fff"
            android:textSize="20sp" />




    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/checkBoxConquista1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista1"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/checkBoxConquista2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista2"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/checkBoxConquista3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista3"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />



        <TextView
            android:id="@+id/checkBoxConquista4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista4"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/checkBoxConquista5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista5"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/checkBoxConquista6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista6"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <TextView
            android:id="@+id/checkBoxConquista7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista7"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />



        <TextView
            android:id="@+id/checkBoxConquista8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/conquista8"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/textoNomeid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/textoNomeid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/textoNomeid3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/textoNomeid4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/textoNomeid5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/textoNomeid6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/textoNomeid7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/textoNomeid8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:visibility="gone"/>








    </LinearLayout>

</LinearLayout>